# ced-3d-splitted

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  details.hpp  main.cpp
i3dlib_win/include/i3d/: i3d_config.h
i3dlib_win/lib/: cbia.lib.i3dcore.dyn.rel.x64.16.lib
static_recipe/: CMakeLists.txt  conanfile.txt  vcpkg.json
